<resources>
    <string name="app_name">SenFacture</string>
    <string name="connection">Connexion</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="sign_up">s\'inscrire</string>
    <string name="email">senfacture@overload.sn</string>
    <string name="payed_bills">Factures payées</string>
    <string name="unpayed_bills">Factures impayées</string>
    <string name="manage_bills">Gérer les factures</string>
    <string name="help">Aide</string>
    <string name="inscription">Inscription</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="degrees">Diplomes</string>
    <string name="o_level">Bac</string>
    <string name="bachelor">Licence</string>
    <string name="master">Master</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="error_field">Veuillez remplir les champs</string>
    <string name="error_connection">Veuillez vérifier votre connexion</string>
    <string name="error_parameters">Paramètres incorrectes</string>
    <string name="error_inscription">Inscription échouée</string>
    <string name="success_inscription">Inscription réussie</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="senfacture">SenFacture est un système de gestion de factures. Il vous permettra d\'enregistrer, de modifier et de consulter les dites factures, qu'elles soient impayées ou non</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_university_fragment">UniversityFragment</string>
</resources>