<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textStyle="bold"
        android:textSize="@dimen/title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtLastName"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/top"
        android:textStyle="bold"
        android:text="@string/degrees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbOLevel"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/middle"
        android:text="@string/o_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbMaster"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/middle"
        android:text="@string/master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cbBachelor"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/middle"
        android:text="@string/bachelor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:backgroundTint="@color/blue_dark"
        android:id="@+id/btnSave"
        android:layout_margin="@dimen/all"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>